src/main/java/syntactic/test/failing/missingStart.ru
struct Test {}
impl Test {
    fn testMethod() -> void {}
}